Fix misaligned padding

--- a/plugins/airtable/src/App.css
+++ b/plugins/airtable/src/App.css
@@ -14,6 +14,7 @@ form {
 
 select {
     cursor: pointer;
+    padding: 0px 16px 1px 10px;
 }
 
 .sticky-top {
